<resources>
    <string name="app_name">ChatApp</string>
    <string name="supervised_by_muhammad_nabil">Supervised by Muhammad Nabil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="or_create_new_account">or create new account</string>
    <string name="username">Username</string>
    <string name="hello_welcome_to_our_char_room">Hello, Welcome to our char room</string>
    <string name="join">Join</string>
    <string name="type_a_message">Type a message</string>
    <string name="create_new_room">Create New Room</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="enter_room_description">Enter Room Description</string>
    <string name="choose_room_category">Choose Room Category</string>
    <string name="password_confirm">password Confirmation</string>
    <string name="create_account">Create Account</string>
    <string-array name="rooms_fragments_titles">
        <item>MyRoomsFragment</item>
        <item>AllRoomsFragment</item>
    </string-array>
</resources>