<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.mis.route.chatapp.ui.auth.fragments.register.RegisterViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_main_background"
        android:paddingHorizontal="16dp"
        android:paddingTop="280dp"
        tools:context=".ui.auth.fragments.register.RegisterFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_container_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/username"
            app:error="@{vm.userNameError}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.usernameLiveData}"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_container_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            app:error="@{vm.emailError}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_container_til">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.emailLiveData}"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:passwordToggleDrawable="@drawable/ic_pasword_toggle"
            app:error="@{vm.passowrdError}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_container_til">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.passwordLiveData}"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/password_confirm_container_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_confirm"
            app:error="@{vm.passwordConfirmError}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_container_til">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.passwordConfirmLiveData}"

                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="80dp"

            android:background="@drawable/shape_button_background"
            android:paddingHorizontal="32dp"
            android:onClick="@{()->vm.register()}"
            app:cardBackgroundColor="@{vm.isRegistring==true ? @color/white : @color/light_blue}"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPaddingLeft="32dp"
            app:contentPaddingRight="32dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/create_account"
                android:textSize="16sp"
                android:textColor ="@{vm.isRegistring==true ? @color/black : @color/white}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/register_btn_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_forward"
                android:visibility="@{vm.isRegistring==true?View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/register_btn_progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:indeterminate="true"
                android:visibility="@{vm.isRegistring==false ?View.GONE : View.VISIBLE}"                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

